timeline phase 2 work
Former-commit-id: ed01a2c5a744c85c33564bb485961fa81d229d65

--- a/_includes/timeline/ph1-ISA.html
+++ b/_includes/timeline/ph1-ISA.html
@@ -1,14 +1,15 @@
 
 
   <article class="column" id="InternationalSpaceAgency">
-    <h5>Creation of the International Space Agency</h5>
+    <details>
+    <summary><h5>Creation of the International Space Agency</h5></summary>
     <p>The agencies of most of the major space-faring nations cooperated in the construction of the International Space Station: ESA, JAXA, Roscosmos, NASA, and CSA. This is the best precedent but is a minor collaboration compared to what would be involved in settling the Moon.</p>
     <p>So the ISA is created and has its own staff, taken from all the member agencies. The founders are the United States, Russia, China, the European Union, India, Japan, and Canada. The agency creates the overall plan and parcels out the work on it. As the United States remains the country with the largest space industry and the most launch facilities, it is headquartered in Florida not far from Kennedy Space Center. </p>
     <p>The construction of the EESS serves as the test case for settling questions of jurisdiction, ownership, information sharing, and legal responsibility. Again the agreements covering the ISS are the model that would need to be built on.</p>
     <p>A shift to an open-source model regarding sharing of the technology developed for the project reduces tensions on several of those issues. A treaty is drawn up for the rest.</p>
     <p>As the project would be underway for a number of years before it involved a permanent human settlement, and a number of years more before there was profit, the scale of cooperation needed to continue working together can ramp up at a manageable pace. A limited-time amendment mechanism for the treaty is used to refine it during its first decade or two of existence.</p>
     <p>The endeavor provides a model for international cooperation that can be applied in many other areas. The sense of shared goals that comes with the undertaking supports the growth of international goodwill. </p>
-
+  </details>
   </article>
 </div>
 <div class="columnSet">
