--- a/_includes/timeline/ph2-longHab.html
+++ b/_includes/timeline/ph2-longHab.html
@@ -2,6 +2,7 @@
  <h5><a href="colonies.html#InukshukModels">Long Hab</a></h5>
  <h5>First Greenhouse</h5>
  <h5>Research into Basic Industry</h5>
+ <h5>Missions Around the Moon</h5>
  <ul>
   <li><h6>Fused Regolith Objects</h6>The simple boards, beams, rods and such that the MIP stations can produce are sufficient for the bulk of this hab, without needing cables or fiber reinforcement. They can also be used to produce simple furnishings (tables, shelves, doors, chairs, beds...) and simple implements (jugs, cups, bowls, boxes, shovels, rakes...) </li>
   <li><h6>Imported Objects</h6> - the roof membrane, life support systems, plumbing and wiring, lights, appliances, and more come from Earth and are installed. 3d printers using metal powder have already been successfully used to create certain parts for the robots, and can reduce what must be shipped from Earth a little, but mostly just by reducing the number of replacement parts sent along.  </li>
