--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -78,7 +78,7 @@ h6
   margin: 5px auto
 
 .column h5
-  background-color: $tabBkgd
+  display: inline
 
 figcaption
   font-size: 0.8rem
@@ -120,3 +120,5 @@ ul
 summary
   color: $headingColor
   font-weight: 600
+  background-color: $tabBkgd
+  margin-bottom: 12px
