--- a/_includes/timeline/ph1-robots.html
+++ b/_includes/timeline/ph1-robots.html
@@ -1,5 +1,6 @@
 <article class="column" id="RobotRoverTests">
-  <h5><a href="machines.html#robots">Robot and Rover  Mission</a></h5>
+  <details>
+  <summary><h5><a href="machines.html#robots">Robot and Rover  Mission</a></h5></summary>
 <p>Each of the 2 LNCs delivers equipment to the base site on the west rim of Hinshelwood crater, each returning once to the Pod Ship to land it all. They land 80 tons of robots, equipment, and supplies, and enough water for the hydrolysis pod to produce the fuel needed for them to make it back to orbit. The robots, operated from Earth and then from orbit, deploy the solar power systems, a hangar for lab work and long-term maintenance and repair, scout, test lots of equipment including for water mining, excavation, and construction, and do a bunch of 'paving' (fusing of the powdery surface into a solid layer). </p>
 <details>
 <summary>Initial tasks done by robots</summary>
@@ -17,8 +18,9 @@
     <li>The LNCs conduct sortie missions scouting places of interest on the Moon and returning samples for testing in the lab.</li>
   </ul>
 </details>
-
-<h5>Crew Sortie Mission and Robot Expansion</h5>
+</details>
+<details>
+<summary><h5>Crew Sortie Mission and Robot Expansion</h5></summary>
 <p>An initial inflatable hab for crew sorties that looks a lot like a Quonset hut (based on upcoming design by Benaroya et al.) is delivered and set up prior to the arrival of a crew of 4 that stays for 2 weeks. The LNCs deliver a further 100 tons of materials and supplies in  support of the crew and accompanying mission goals. </p>
 <p>Their work makes the robots about as agile and precise as people. They test and deploy the new equipment that arrived before their mission. Much of that equipment is prototype water mining robots. By the time they leave, the robots on the base are as capable as a permanent crew of around 30 people. They are assisted in their work by the crew on Crossroads Station, who do the remote operation of the robots.</p>
 
@@ -32,8 +34,9 @@
 <li>They set up the guides and markers showing the robots where to excavate for the first permanent hab, and the production units for the construction materials that hab will be made of. They ensure the products from those stations meet quality standards and the construction robots are performing up to spec. Once satisfied, they give the green light for construction to commence.</li>
 </ul>
 </details>
-
-<h5><a href="https://moonwards.com/colonies.html#PolarFirstHab">Construction of First Hab at the Polar Base</a></h5>
+</details>
+<details>
+<summary><h5><a href="https://moonwards.com/colonies.html#PolarFirstHab">Construction of First Hab at the Polar Base</a></h5></summary>
 <p>This habitat is the first instance of the robots doing <a class="https://www.moonwards.com/machines.html#building">truly complex work</a>. It isn't possible until the crew on Crossroads is able to control them finely, and count on them to execute a lot of complex behaviour with little to no direction (such as maintaining their balance, picking things up, throwing and catching things).</p>
 <p>It also requires excavating a cube 30 m on a side, and mass production of simple construction materials with consistent quality (though that quality doesn't have to be high). The outer walls and internal floors, walls and furnishings are made with local materials. </p>
 <p>Everything else is shipped in, but it takes only one Pod Ship payload to deliver it all. Large items include a second inflatable hab with an extra large airlock, the tubes and mirrors of the light funnels, the multi-layer transparent membrane roof and its reinforcing cables, several very large high-resolution computer screens, and a radiator unit.</p>
@@ -44,4 +47,5 @@
 </p>
 <p>With this industrial approach and the cargo capacity of the transport system, water production ramps up very quickly. Accompanying production of carbon dioxide, ammonia, and several trace gases is also significant for lunar development. Production exceeds 10 kilotons per year within 5 years, if reserves are at the low end of predictions.</p>
 <p>This means that all the fuel for the Pod Ships, the LNCs, and other spacecraft fueling at the EESS then comes from the Moon. </p>
+</details>
 </article>
