timeline phase 2 cont
Former-commit-id: 3f2bb3d06458761a0d6ffb252770cc0b90c44243

--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -117,6 +117,10 @@ ul
   &:hover
     background-color: transparent
 
+details
+  box-sizing: border-box
+  margin-left: 2%
+
 summary
   color: $headingColor
   font-weight: 600
