--- a/_includes/timeline/ph2-longHab.html
+++ b/_includes/timeline/ph2-longHab.html
@@ -1,8 +1,48 @@
 <article class="column" id="InukshukFirstHab">
- <h5><a href="colonies.html#InukshukModels">Long Hab</a></h5>
- <h5>First Greenhouse</h5>
- <h5>Research into Basic Industry</h5>
- <h5>Missions Around the Moon</h5>
+  <details>
+ <summary><h5>Long Hab</h5></summary>
+ <p>Long Hab is a long, deep habitat with a vaulted roof. Like all habs in this mission architecture, it has plenty of natural light and big outdoor views. Its views are achieved with mirrors and lenses, so that radiation is kept low and the structural challenges of large windows are avoided. </p>
+ <p>Enough equipment, crew, and knowledge have built up for Long Hab to be a big step up from First Hab. It is 200 m long, 30 m wide, with variable depth of 30 to 50 m from the floor to where the walls meet the roof, and the vaulted ceiling is 15 m high. </p>
+ <p>Tele-operation of the robots building Long Hab is done by the crew of First Hab with support by the crew of Crossroads. Little tele-operation is done from Earth for construction. It is also uncommon for astronauts to work outside on construction, instead they do most things remotely through the robots. When they go out, they put pressurized cabs on the rovers and wear only flight suits, not proper space suits. Space suits are very restrictive, uncomfortable, and clumsy, they are used only when necessary (and occasionally just to go for a walk outside).</p>
+ <details>
+   <summary>Construction Process</summary>
+   <ul>
+ <li>In-situ construction materials and techniques have developed enough that nothing structural is brought from Earth for Long Hab, and even some systems installations are made of local materials.</li>
+ <li>Excavation methods have matured enough that vertical walls of great height, deep undercuts, and tunnels of 50 or 60 meters are not a problem.
+   <ul>
+     <li>Blasting is used to make shaped pits and channels, the sides of which are then built up by back-filling behind walls, or pared down with heat-based cutting methods. The colony now has many such tools on a range of scales. </li>
+     <li>Ripper and jack-hammer attachments on the arms of heavy-duty construction rovers still do rough shaping of recesses and undercuts. After that, specialized liquid-cooled saw blades and drill bits allow cuts to be made and holes to be drilled. Heat from friction would build up in the vacuum environment and make blades and bits seize if they weren't cooled. The bulk of the cooling systems make the them thick, they can't cut or drill anything narrower than 3 cm across. </li>
+   </ul></li>
+   <li>The arches that form the vaulted roof are made of blocks from the first full MIP stations - melt-in-place stations, that evolved from earlier processes of that kind. There are also now many graphite molds, and molten regolith is produced in bulk for them, and for pouring into forms for large pieces. The roof is reinforced with basalt fiber cables from new production facilities making basalt fiber products on-site. Good basalt feedstock for the process is brought by LNCs returning from sorties where they had access to it.
+   </li>
+ </ul>
+
+ </details>
+ <details>
+   <summary>Hab Architecture</summary>
+   <p>The astronauts don't get to spend much time outside, and they are never truly outside. When on the open surface they are surrounded by beautiful desolation that can't fill in for the outdoors on Earth. Their indoors has to come as close as possible to being their outdoors too. This is one reason why it is so important to make the habs as huge as possible from the outset. It is a matter of emotional health, a matter that becomes more important with each passing month.</p>
+   <p>The habs are also all huge because many things about regulating an environment in space become easier with size: thermal regulation, air recycling, air quality, noise control, and everything having to do with creating and balancing an ecosystem, from mould not instantly growing on every dirty surface to there simply being enough space for a complex set of organisms to coexist in something resembling harmony.</p>
+   <p>Thanks to the materials the habs are built from, and the way they are melded together, surfaces are never quite straight or flat and corners are soft. Once the molten regolith parged over the walls and cielings has cooled into a single glassy surface, it will naturally have variations in tone and texture, and many simple things can help that along to accentuate the richness of the final patina. Not only is the building technique the best way to make use of the local materials, it is the best way to create a space that feels like you are in nature, though you aren't. This will be important to the residents.</p>
+   <details>
+     <summary>Main Features</summary>
+     <ul>
+       <li>Light tubes terminating in lenses - similar to the light tubes shown on the initial model of First Hab, these tubes funnel in a large amount of sun, and can do so most of the time at Inukshuk's location. In this version, the lens at the mouth inside the hab disperses the sun over a wide enough area for it to have the intensity of sun near sunset, with the spectrum of sun at noon. </li>
+       <li>Sky-like sections - A thin layer of molten aluminum is spattered over these sections of the vaulted ceiling, leaving a surface that creates scattered, mottled reflections. This creates a sense of space above and distributes light more evenly. This is done in the sections with the light tubes, of which there are three along the length of the hab, interspersed with sections that feel more like buildings, as does either end of the hab.</li>
+  </details>
+ </details>
+ </details>
+ <details>
+ <summary><h5>First Greenhouse</h5></summary>
+</details>
+<details>
+ <summary><h5>Research into Basic Industry</h5></summary>
+  <li>3D printers build objects out of powder regolith, metal powders, and polymers. The regolith printers have been refined to print with a resolution of a millimeter or two
+</details>
+<details>
+ <summary><h5>Missions Around the Moon</h5></summary>
+ </details>
+
+
  <ul>
   <li><h6>Fused Regolith Objects</h6>The simple boards, beams, rods and such that the MIP stations can produce are sufficient for the bulk of this hab, without needing cables or fiber reinforcement. They can also be used to produce simple furnishings (tables, shelves, doors, chairs, beds...) and simple implements (jugs, cups, bowls, boxes, shovels, rakes...) </li>
   <li><h6>Imported Objects</h6> - the roof membrane, life support systems, plumbing and wiring, lights, appliances, and more come from Earth and are installed. 3d printers using metal powder have already been successfully used to create certain parts for the robots, and can reduce what must be shipped from Earth a little, but mostly just by reducing the number of replacement parts sent along.  </li>
@@ -12,7 +52,5 @@
   <li><h6>Inukshuk Base is Declared a Permanent Settlement</h6>Due to the great significance of the first permanent habitat on another celestial body, the first completed hab is simply called First Hab. The second hab becomes known as Long Hab because it is long and narrow.</li>
  </ul>
 
- <p><h6>Perfect Place for a Great Telescope</h6> Easy servicing, power and data trasmission provided by existing station infrastructure, mass of the telescope not an issue, aiming and tracking of the scope very easy (though elaborate measures have to be taken to isolate it from vibrations and oscillations due to other activity on the skyhook). The anchor makes an excellent home for a really awesome telescope. For this reason it is named for Carl Sagan, an astronomer who dreamed of space settlement and is a figurehead of the movement. </p>
- <p>Nothing else is planned for this skyhook - activities will occur at Gagarin Station on the equatorial skyhook once it is built. All that needs to happen at Sagan, is that its mass be replaced with bulk regolith and fused regolith structures so its valuable minerals can be extracted at Inukshuk, and it needs to berth the pod ship every two weeks while payload transfers occur, and mechanisms on it need to keep the skyhook's orbit in good shape.</p>
- <p>Once Gagarin is commissioned, the pod ship will berth there instead. Shuttles will continue to use Sagan's skyhook for travel around the Moon, but will no longer send payload up the tether. Instead, they will take payloads to Lalande, and from there they will be sent up Gagarin's skyhook. Once all the useful minerals in Sagan's asteroid are used up, things will be pretty peaceful there. The telescope can be spread out, given multiple mirrors and fancy shades to protect it from heat and radiation. Once it is no longer needed for transport to and from the surface, the telescope's needs dictate development on that skyhook.</p>
+
 </article>
