--- a/sass/_style-vars.sass
+++ b/sass/_style-vars.sass
@@ -1,5 +1,6 @@
-$outerBkgd: rgba(50, 50, 0, 0.7)
+$outerBkgd: rgba(40, 45, 15, 0.8)
 $innerBkgd: rgba(50, 50, 50, 0.8)
+$thirdBkgd: rgba(50, 38, 0, 0.7)
 $tabBkgd: rgba(0, 0, 0, 0.4)
 $sideBkgd: rgba(0, 0, 0, 0.8)
 $outRadius: 2rem
@@ -8,14 +9,14 @@ $sideRadius: 1.5rem 0 0 1.5rem
 $mainPad: 1rem
 $navAnchor: rgb(250, 200, 25)
 $navAHover: yellow
-$headingColor: rgb(150, 145, 45)
+$headingColor: rgb(165, 165, 45)
 $lightAccent: rgb(115, 115, 15)
 $darkAccent: rgb(80, 80, 15)
 $extraDarkAccent: rgb(47, 52, 0)
 $introRadius: 0 1.5rem 1.5rem 0
 $figcapSize: 0.8rem
-$linx: rgb(220,220,0)
-$aVisited: rgb(190,228,50)
+$linx: rgb(193,218,25)
+$aVisited: rgb(210,200,0)
 $aHoverBk: rgb(60,60,10)
 $Radius5px: 5px
 
