timeline phase 2 more work
Former-commit-id: bab7095f7ec63f73df50377286e115afc7ae466a

--- a/_includes/timeline/ph1-summary.html
+++ b/_includes/timeline/ph1-summary.html
@@ -14,7 +14,7 @@
       While the crew tested the upgraded and new robots on their first sortie at the polar base, they used them to construct several inukshuks - stacks of balanced stones traditionally used as landmarks among Arctic peoples. They made one particularly large one, liked it, and left it standing. Thus the colony acquired its name.
     </span>
   </div>
-  <h2>Phase 2 - duration 15 years</h2>
+  <h2>Phase 2 - duration 10 years. Residence Program Round 1.</h2>
 </div>
 
 </div>
