timeline phase 3 begun
Former-commit-id: 658bb2a3efb014adfe22a4eeeff83215b5982897

--- a/_includes/timeline/ph1-ships.html
+++ b/_includes/timeline/ph1-ships.html
@@ -5,7 +5,7 @@
 </div>
 <div class="columnSet" id="shipsRobotsISA">
   <article class="column" id="FirstTransportShips">
-    <details>
+  <details>
     <summary><h5 style="display: inline">Construction of the Earth Equatorial Space Station</h5></summary>
     <p>Because of the scale and nature of the work that happens on this station, it is built in an equatorial orbit. These orbits never pass through the South Atlantic Anomaly, so the radiation exposure of people on the station is a fraction of what crews on the ISS get. This architecture has been extensively explored by <a href="http://alglobus.net/">Al Globus et al.</a>. The station is the proving grounds for tele-operated robotic construction. Successful development of that and cost savings from reusable launch vehicles allows creation of a space station on a much grander scale than the current International Space Station. Progress in AI, tele-robotics, and in-situ lunar resource processing allow later materials to be obtained from the Moon.</p>
     <details>
@@ -17,16 +17,16 @@
         <li>Further modules extending the Hub house all the key infrastructure for the Station - power conversion and distribution, cooling, air tanks, air scrubbers, airlocks and docks for crewed ships, tools, sensors, comms equipment, and initial crew quarters.
           </li>
         <li>Then, a flattened Torus is added. It and the Hub are spun up to create a simulated gravity environment. The torus is large enough to accommodate both crew quarters and labs doing a range of research on low-gravity. It has several greenhouse spaces and sections for animal experiments. Its outer rim experiences centrifugal force equivalent to the gravity on Mars, while the top floor of its torus is like lunar gravity. The Hub contains a lab for micro-gravity experiments. The Hexagon does not rotate, it is counter-spun to keep it stationary relative to the Earth. </li>
-        <li>Finally, 4 Teardrops are added to the torus, spaced 90&deg; apart, each across from one of the tubes connecting the Torus to the Hub. The shallow bowls at the bottom of the cones connecting them to the Torus experience centrifugal force of nearly one gravity. This means crew would move regularly between environments with different levels of gravity. Over time, monitoring of the crew's health establishes how much time in how much gravity is needed for good health. </li>
+        <li>Finally, 4 Teardrops are added to the torus, spaced 90&deg; apart, each across from one of the tubes going between the Torus and the Hub. The tips of their cones attach to the outside of the Torus. The shallow bowls at their other ends experience centrifugal force of nearly one gravity. This means crew would move regularly between environments with different levels of gravity. Over time, biomedical monitoring of the crew establishes how much time is needed in the varying levels of gravity for good health.</li>
         <li>The solar panels need to be quite extensive for the Station to do its construction and processing work, and to supply the labs with all the power they need. They extend from the end of the hub opposite the hexagon of trusses, together with the
         radiator panels. </li>
         <li>Many elements of the final components built, including internal elements of the Torus and the Teardrops, are made with materials from the Moon</li>
-        <li>Water and lunar dust from the Moon turn the greenhouses and animal habitats into complex micro-environments. This enables experiments in creating fertile soil from the lunar dust, cultivation of a wide range of plants, and the adaptation of small animals to the small garden environments thus created.</li>
+        <li>Water and lunar dust from the Moon turn the greenhouses and animal habitats into complex micro-environments. This enables experiments in air and water purification with plants, creating fertile soil from the lunar dust, cultivation of a wide range of plants, and the adaptation of small animals to the small garden environments thus created.</li>
       </ul>
     </details>
   </details>
   <details>
-    <summary><h5><a href="machines2.html#PodShip">Pod Ships start shuttling between Earth orbit and Lunar Orbit</a></h5></summary>
+    <summary><h5><a href="machines2.html#PodShip">Pod Ships</a> start shuttling between Earth orbit and Lunar Orbit</h5></summary>
     <p>The Pod ships are operated remotely. They are capable of doing rendezvous and docking maneuvers on their own. Basically they are a nose with all the operating systems, a robotic arm, and a pair of solar panel wings, then a long truss with racks for the pods, and then the fuel tanks and engines on the far end.</p>
     <p>The pods are the space equivalent of shipping containers - standardized and mass-produced tubes with rounded ends covered in insulation and Whipple shielding, a sliding door, internal structures for storage, and connectors if items need power or a comms connection. A Pod ship can take 8 small pods or 4 long ones. Crew are transported in pods adapted for life support and basic accommodations. Some pods are  water tanks, returning mined water from the Moon to the EESS. Pod ships are designed for a maximum payload of 80 tons to lunar orbit when operations begin.
     </p>
@@ -90,4 +90,14 @@
       An alternative is the climber cars run on nuclear power from a small reactor connected to Stirling engine generators. By putting the reactor in a separate car and running a power cable from there to the climber, the reactor can be kept a kilometer or more from the climber, allowing a shield with a smaller area to be used between the two. A shielded dock thus has to be made above the foot platform, so the climber can pass the reactor and reach its destination. A dock that is about 10 km from the anchor station is also needed, so the cone of shielded space is wide enough to cover the whole station, and anything that might stick out gets a weaker dose. Overall, the microwave beaming approach seems more flexible, more robust, and safer, as long as the beams can be kept well aligned despite oscillations due to actions on the tether. The transmitters would need to be able to rotate a small amount to keep receivers in their focus. Having flywheels to store energy as well thus is also interesting in that they can be used simultaneously to dampen oscillations. Energy harvested when climbers control descent by braking could also be used to spin up the flywheels. Perhaps calculations would show the flywheels would be too heavy to be a significant help, pending that it is just a thought.
     </span>
   </div>
+<details>
+  <summary><h5>EESS Fuel Depot and Reusable Upper Stages</h5></summary>
+  <p>Once ice mining is in full swing, a plan to refuel the upper stages of rockets going to the EESS is initiated. Once complete, all the rockets delivering to the EESS are almost fully reusable - both stages and the capsule or cargo pod. This architecture would allow launch prices to drop by 80% to 90% from current levels, a critical goal if the high flight-rate lunar settlement requires is to be maintained. </p>
+  <ul>
+    <li>Once the EESS is getting all its orbital maintenance fuel from the Moon, its orbit is lowered from about 400 km to 200 km. The increased atmospheric drag will mean more frequent boosts are needed to keep it at that altitude, but that is more than offset by the reduction in the fuel upper stages need to return to Earth from that lower altitude.</li>
+    <li>Since on the return trip these stages aren't pushing a heavy payload, they have enough fuel to decelerate to a full stop and do a soft landing. On the way up they were accelerated to 1.5 km/s or so by the first stage of the launch vehicle. On the way back, they have to brake that velocity themselves, plus all the additional speed from there to meeting the EESS. They might need a little extra fuel to brake that extra velocity while empty, over what was needed to get to the station with their payload.  If so, their fuel tanks will have space for that fuel and be not quite full on the outward journey.</li>
+    <li>In fact, because the EESS has the Hexagon and a complement of robots, instead of jettisoning fairings, the payload section can be integrated into the stage, with doors that open for removing payload, a little bit like the Space Shuttle cargo bays. The whole thing returns intact and ready for quick reuse.</li>
+    <li>And in fact, it would be capable of returning a small payload if desired. At no extra cost.</li>
+  </ul>
+</details>
   </article>
