--- a/_includes/timeline/timelineIntros.html
+++ b/_includes/timeline/timelineIntros.html
@@ -17,7 +17,7 @@
    <summary>Go big, go robotic</summary>
    <p>
     Our position is it doesn't make sense to undertake construction or any industrial process on the Moon unless it can be done by robots that are operated remotely, or that operate themselves. It will be difficult to get this right at first, but once achieved then the slow, grinding, linear growth of projects in space up to now - is gone. In its place is a growth curve steeper than anything we have ever known. So to contemplate the workings of such a system, you might as well model it on the Moon, where there are no immediate and rather alarming questions about the resulting unemployment, or environmental impact, or power shifts, or anything like that. The reason this timeline forecasts such dramatic growth is because the robots make a world of difference. Advances along these lines have been impressive recently. This is a future we have to expect. </p>
-    <p>Also, once a base is being built of lunar materials, it should be as big as possible. Most things should be made as large as they reasonably can be, until transport between Earth and the Moon has become routine and the colonies are very well established. Redundancy and extra capacity tend to come in handy at an outpost. The kind of businesses the colony will pursue first also tend to benefit from economies of scale - real estate, heavy machinery manufacture, facilities for tourism, sports, and broadcasting.
+    <p>Also, once a base is being built of lunar materials, it should be as big as possible. Most things should be made as large as they reasonably can be, until transport between Earth and the Moon has become routine and the colonies are very well established. Redundancy and extra capacity tend to come in handy at an outpost. Most of the businesses the colony will pursue first also tend to benefit from economies of scale - real estate development, heavy machinery manufacture, facilities for broadcasting, sports, research, and tourism.
    </p>
   </details>
  </article>
@@ -28,8 +28,9 @@
    <p>Everything here is predicated on the idea that a group of nations decide together to colonize the Moon and devote the funds necessary to do so properly without question. So, let the model be that the first missions are funded and carried out jointly by the nations with well-established space agencies - the United States, Russia, the European Union, China, India, Japan, and Canada. Once the Residence Program (explained below) begins, all nations participate.
    </p>
    <p>This is, of course, the arena where Moonwards leaves reality aside. A case can be made that until we undertake something together on the scale imagined here, and thus establish a sense of common cause, the world will not have peace. If so, contemplating it is helpful to reaching such peace, however remote it is from the world we live in. </p>
-   <p>The rosy, cozy view envisioned below also maximizes the scope of activity the project can ponder. In many places it's even simply convenient for organizing people into groups within the virtual world. If things about it seem undesirable to you, please bear in mind it is deliberately Utopian for all these reasons, and is not meant to endorse any political policy in the real world.
+   <p>The rosy, cozy view envisioned below also maximizes the scope of activity the project can ponder. In many places it's even simply convenient for organizing people into groups within the virtual world. Please bear in mind it is deliberately Utopian for all these reasons, and is not meant to endorse any political policy in the real world.
    </p>
+   <p>Consequently, it doesn't make sense to predict exact schedules. The timelines below are rough estimates of duration and deliberately exclude exact start dates.</p>
   </details>
  </article>
 </div>
