--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,10 +11,10 @@
 					</li>
 					<li><a href="timeline.html" title="How colony development unfolds in our virtual world">Timeline</a>
 						<ul>
-							<li><a href="timeline.html#shipsRobotsISA" title="The ships for high-volume cargo, the robots for large-scale construction by tele-operation, and the International Space Agency.">Ships, Robots, ISA</a></li>
-							<li><a href="timeline.html#skyhookHabsRP" title="Vertical Skyhook slashes fuel needs, First Hab at Inukshuk, Sagan Space Station, and the rules of the Residence Program">Skyhook, Habs, RP</a></li>
+							<li><a href="timeline.html#shipsRobotsISA" title="The ships for high-volume cargo, the first skyhook, the robots for large-scale construction by tele-operation, and the International Space Agency.">Ships, Robots, ISA</a></li>
+							<li><a href="timeline.html#skyhookHabsRP" title="2 more skyhooks, Fetcher and Hopper ships, Long Hab, Greenhouse,  the Residence Program">Skyhook, Habs, RP</a></li>
 							<li><a href="timeline.html#residenceProgramChart" title="Showing the population, cost, and revenue of each round, and notes on rule changes in later rounds">Residence Program Chart</a></li>
-							<li><a href="timeline.html#inukshukRP1" title="The equatorial skyhook is built, all the work at Inukshuk Base, and how 250 people living on the Moon spend their time and stay healthy.">250 Astronauts</a></li>
+							<li><a href="timeline.html#LalandeCol" title="Expansion to Lalande, Gagarin Shipyard, Lunar life">250 Astronauts</a></li>
 							<li><a href="timeline.html#3baseRP2-4" title="Gagarin Station shipyard and manufacturing, construction of Cernan's Promise infrastructure, and 3200 people begin to be a society.">3 Bases 3200 People</a></li>
 							<li><a href="timeline.html#RPround5" title="Lunar skyhook system complete, coil gun use, LEO skyhook underway, Cernan's Promise becomes a town full of homes, farms, factories, community spaces, bustle, and life. ">Exponential Growth</a></li>
 							<li><a href="timeline.html#RProunds6-7" title="LEO skyhook transforms access to space, Lalande City is built by autonomous robots and a few human directors, The Residence Program completes, there is a currency, a justice system, a constitution, and they start having kids.">Explosive Growth</a></li>
