--- a/_includes/timeline/ph1-robots.html
+++ b/_includes/timeline/ph1-robots.html
@@ -6,7 +6,7 @@
 <summary>Initial tasks done by robots</summary>
   <ul>
     <li>Set up tall masts for solar panels and microwave power transmitters, cables and power management equipment, and radiator units. The rovers are powered by microwaves beamed to their rectennas, smaller mobile robots recharge frequently, including sometimes from the rovers. The solar panel masts rotate over the day to stay aligned with the sun. The Moon has a very minimal tilt to the sun, only 1.5&deg; - at the poles the sun skirts the horizon all year and in high spots is almost never out of view. The base is in a spot that gets sun most of the time. With the added height the masts give the solar panels, they are in the sun almost constantly.</li>
-    <li>A half-pipe shaped hangar is set up on ground that has been roughly leveled and paved. It is an unpressurized shell with a various snap-together units inside, creating a maintenance and repair hangar for the robots and their tools, and a lab area. All the equipment for these tasks in installed in the prefab bays designed for them. </li>
+    <li>A half-pipe shaped hangar is set up on ground that has been roughly leveled and paved. It is an unpressurized shell with various snap-together units inside, creating a maintenance and repair hangar for the robots and their tools, and a lab area. All the equipment for these tasks in installed in the prefab bays designed for them. </li>
     <li>One of the cargo pods lowered from a LNC is a self-contained unit for converting water to liquid oxygen and liquid hydrogen. It only needs power from the solar masts or the LNC reactors, and its custom radiator units deployed. It lands with a full water tank.</li>
     <li>A rover using simple mirrors and Fresnel lenses fuses surface regolith around the site. The thin layer created will tend to break up and shift, but by driving a grid of fused regolith stakes into the ground before passing the lens over an area, the melted surface fuses with the stakes into one piece. Cracking then doesn't lead to shifting. Thickening the fused layer by spreading more regolith overtop and heating it is done in areas that call for it, such as the LNC landing pads. </li>
     <li>These simple stakes are produced in graphite molds filled with molten regolith produced with a parabolic mirror setup. This method produces items with consistent and high quality and uniform shape.</li>
@@ -36,7 +36,7 @@
 </details>
 </details>
 <details>
-<summary><h5><a href="https://moonwards.com/colonies.html#PolarFirstHab">Construction of First Hab at the Polar Base</a></h5></summary>
+<summary><h5>Construction of <a href="https://moonwards.com/colonies.html#PolarFirstHab">First Hab</a> at the Polar Base</h5></summary>
 <p>This habitat is the first instance of the robots doing <a href="https://www.moonwards.com/machines.html#building">truly complex work</a>. It isn't possible until the crew on Crossroads is able to control them finely, and count on them to execute a lot of complex behaviour with little to no direction (such as maintaining their balance, picking things up, throwing and catching things).</p>
 <p>It also requires excavating a cube 30 m on a side, and mass production of simple construction materials with consistent quality (though that quality doesn't have to be high). The outer walls and the internal floors and walls are made with local materials. Furnishings and utensils are also locally made (shelves, tables, doors, chairs, beds, dishware, handtools).</p>
 <details>
@@ -60,6 +60,6 @@
 <p>Once a successful approach to ice mining is found, 200 tons of equipment is brought in to do just that. Initial caution to preserve the permanently shadowed regions for research is abandoned in Hinshelwood Crater and Hermite A Crater. They become ice mines. This opens the possibility of using techniques that are much more disruptive, but get ever more efficient with scale. One possibility is covering a large area with a strong membrane and sealing it to the ground, putting a heater in the center of it, and pumping off any gases released by the heat.
 </p>
 <p>With this industrial approach and the cargo capacity of the transport system, water production ramps up very quickly. Accompanying production of carbon dioxide, ammonia, and several trace gases is also significant for lunar development. Production exceeds 10 kilotons per year within 5 years, if reserves are at the low end of predictions.</p>
-<p>This means that all the fuel for the Pod ships, the LNCs, and other spacecraft fueling at the EESS then comes from the Moon. </p>
+<p>This means that all the fuel for the Pod ships, the LNCs, the EESS, and other spacecraft fueling at the EESS then comes from the Moon. </p>
 </details>
 </article>
