timeline phase 3 work
Former-commit-id: 8f4136a1e8b3983fe2899f138c817b7df02da7d8

--- a/_includes/timeline/ph3-dev.html
+++ b/_includes/timeline/ph3-dev.html
@@ -1,2 +1,17 @@
 <article class="column">
+  <details>
+    <summary><h5>Cernan's Promise</h5></summary>
+  </details>
+  <details>
+    <summary><h5>Robotics and AI</h5></summary>
+  </details>
+  <details>
+    <summary><h5>Manufacturing</h5></summary>
+  </details>
+  <details>
+    <summary><h5>Greenhouses</h5></summary>
+  </details>
+  <details>
+    <summary><h5>O'Neill Cylinders</h5></summary>
+  </details>
 </article>
