--- a/_includes/timeline/ph3-soceco.html
+++ b/_includes/timeline/ph3-soceco.html
@@ -1,3 +1,15 @@
 <article class="column">
+  <details>
+    <summary><h5>Lunar Life</h5></summary>
+  </details>
+  <details>
+    <summary><h5>The Moon Agency</h5></summary>
+  </details>
+  <details>
+    <summary><h5>Broadcasting</h5></summary>
+  </details>
+  <details>
+    <summary><h5>The Moon Fund and Privatization</h5></summary>
+  </details>
 </article>
 </div>
