--- a/_includes/timeline/ph3-trans.html
+++ b/_includes/timeline/ph3-trans.html
@@ -2,9 +2,17 @@
   <article class="column" id="AsteroidsShipyard">
     <details>
       <summary><h5>Expansion of the Lunar Fleet</h5></summary>
+      <p>This phase sees the expansion of the fleet to 10 Pod ships (max. payload 250 tons), 14 LNCs (max payload 80 tons), 10 Hoppers (max payload 100 tons), and 12 Fetch ships (max payload 15 kilotons and 50 m across). All models of ship have been improved, the earlier ones overhauled to the new standards.</p>
+      <p> The Fetcher ships and Hoppers are improved most of all. Now each Fetcher ship that's on standby (4 of them, 2 at each of the equatorial skyhooks) is attached to a Hopper on standby. When a target of opportunity comes around, the Hoppers act as a first stage to the Fetchers, accelerating them towards their targets so they reach them much sooner. Once the Fetcher is released, the Hopper returns. If necessary, it uses all its fuel on the boost except  a small reserve, which it uses to enter an orbit around Earth or the Moon. A Pod ship or another Hopper is then sent to retrieve it. </p>
+      <p>Other than that, the Fetcher ships are larger, and are set up for modular last-minute assembly with the appropriate set of pieces, depending on the nature of the target. Characterization of the asteroids spotted has improved. If they are judged sufficiently solid and rigid, the complex SHEPHERD bagging mechanism isn't used. Instead the asteroid is just wrapped in a net for hauling, which is much lighter. It is also possible to vary the number of engines and size the fuel tank to the target. </p>
     </details>
     <details>
-      <summary><h5>Final 2 Polar Skyhooks </h5></summary>
+      <summary><h5>Final 2 Skyhooks </h5></summary>
+      <p>One more polar skyhook is built, and a second equatorial skyhook. The second skyhook on the equator is always on the opposite side of the Moon from Gagarin. The orbital period of all the skyhooks is the same. If they were all in one plane, each of the three polar skyhooks would be 120&deg; from the other two. This keeps all the skyhooks as far apart from each other as possible. It also means that during the night, the new colony at Cernan's Promise has a line of sight to the anchor station on at least one skyhook most of the time. This way power from the solar arrays on those stations can be beamed to the colony's microwave receiver most of the time.</p>
+      <p>The existence of three polar skyhooks means one of them passes within 3&deg; east or west of any spot on the Moon once every 5 days. A LNC that wasn't heavily loaded could manage the  extra distance and the turn necessary to meet up with the closest foot platform on any pass. So, most of the time, a LNC can go to or from anywhere, if needed, with a delay of no more than 14 hours (the time it takes a skyhook to orbit once).</p>
+      <p>There are two equatorial skyhooks because they are the connection to Earth - and the rest of the solar system. It is much easier for ships from other worlds to rendezvous with a station in an equatorial orbit, as the Moon's equator is aligned very closely to the plane of the ecliptic (the plane on which the planets lie). Equally, any direction of travel on that plane is available once per orbit.</p>
+      <p>Because asteroid retrieval remains a matter of reaching the very small, very numerous Near Earth Asteroids, having launch windows for pursuit of new targets open twice as often is a big help. As traffic to various points in the solar systems grows, the flexibility and added capacity of two equatorial skyhooks will become increasingly useful. </p>
+      <p>Each of the new skyhooks is given a 10 kiloton asteroid as an anchor mass. As these asteroids are mined, material removed is replaced by material sent up from the surface, to preserve that mass.</p>
     </details>
     <details>
       <summary><h5>Gagarin Shipyard</h5></summary>
@@ -12,4 +20,8 @@
     <details>
       <summary><h5>Interplanetary launches</h5></summary>
     </details>
+    <details>
+      <summary><h5>2nd Earth-orbiting Space Station</h5></summary>
+    </details>
+
   </article>
