--- a/_includes/timeline/ph2-summary.html
+++ b/_includes/timeline/ph2-summary.html
@@ -2,7 +2,8 @@
 <div class="spanAll">
   <p>By the end of this phase:</p>
   <ul>
-    <li>There are 250 people living on the Moon - 200 First Rounders and 50 ISA staff.</li> <li>By mass, they get about two-thirds of their food from the Greenhouse and the Long Hab gardens.</li>
+    <li>There are 250 people living on the Moon - 200 First Rounders and 50 ISA staff.</li>
+    <li>By mass, they get about two-thirds of their food from the Greenhouse and the Long Hab gardens.</li>
     <li>The ice mines produce 100 kilotons of ice per year</li>
     <li>A Fetcher has returned a small asteroid massing 1.5 kilotons to Sagan Station. It is a stony asteroid with a good metal content. </li>
     <li>The other two Fetchers are en route with catches of their own. One is carbonaceous and masses 1 kiloton, the other is mostly metallic and masses 2.5 kilotons.</li>
@@ -10,6 +11,7 @@
     <li>50 people staff Crossroads, and 50 staff Gagarin.</li>
     <li>There have been 200 launches to the EESS. Almost all of them have carried crew, as well as equipment and supplies for the various stations and Inukshuk.</li>
     <li>Most of those launches had an upper stage that was refueled with fuel from the Moon, and returned to Earth for reuse.</li>
+    <li>Scaleable manufacturing processes, using purely materials acquired on the Moon or from asteroids, have been developed for the following goods: steel, topsoil, Zylon, a range of silicone polymers, transparent glass, structural glass composites, high explosives, sapphire, quartz, and pure metals including iron, aluminum, silicon, magnesium, titanium, calcium, and manganese </li>
   </ul>
 </div>
 </div>
