timeline ph 3 continued
Former-commit-id: baef5fae1857105becaf195d27fcddcc866fa838

--- a/_includes/timeline/ph3-dev.html
+++ b/_includes/timeline/ph3-dev.html
@@ -1,6 +1,7 @@
 <article class="column">
   <details>
     <summary><h5>Cernan's Promise</h5></summary>
+            All the factories set up at CP direct most of their output to making spacecraft, space stations, tether installations, space robots, and equipment for other worlds. By the end of this phase less then 20% of the mass of any of these things comes from Earth, and various items are made completely on the Moon.
   </details>
   <details>
     <summary><h5>Robotics and AI</h5></summary>
