--- a/_includes/timeline/ph3-trans.html
+++ b/_includes/timeline/ph3-trans.html
@@ -1,10 +1,11 @@
 <div class="columnSet" id="LalandeCol">
   <article class="column" id="AsteroidsShipyard">
     <details>
-      <summary><h5>Expansion of the Lunar Fleet</h5></summary>
-      <p>This phase sees the expansion of the fleet to 10 Pod ships (max. payload 250 tons), 14 LNCs (max payload 80 tons), 10 Hoppers (max payload 100 tons), and 12 Fetch ships (max payload 15 kilotons and 50 m across). All models of ship have been improved, the earlier ones overhauled to the new standards.</p>
-      <p> The Fetcher ships and Hoppers are improved most of all. Now each Fetcher ship that's on standby (4 of them, 2 at each of the equatorial skyhooks) is attached to a Hopper on standby. When a target of opportunity comes around, the Hoppers act as a first stage to the Fetchers, accelerating them towards their targets so they reach them much sooner. Once the Fetcher is released, the Hopper returns. If necessary, it uses all its fuel on the boost except  a small reserve, which it uses to enter an orbit around Earth or the Moon. A Pod ship or another Hopper is then sent to retrieve it. </p>
-      <p>Other than that, the Fetcher ships are larger, and are set up for modular last-minute assembly with the appropriate set of pieces, depending on the nature of the target. Characterization of the asteroids spotted has improved. If they are judged sufficiently solid and rigid, the complex SHEPHERD bagging mechanism isn't used. Instead the asteroid is just wrapped in a net for hauling, which is much lighter. It is also possible to vary the number of engines and size the fuel tank to the target. </p>
+      <summary><h5>Fleet Expansion - More Fetching</h5></summary>
+      <p>This phase sees the expansion of the fleet to 10 Pod ships (max. payload 250 tons), 14 LNCs (max. payload 80 tons), 10 Hoppers (max. payload 40 tons), and 12 Fetchers (max. payload 15 kilotons and 50 m across). All models of ship have been improved, the earlier ones overhauled to the new standards. It also sees the dawn of Toss ships.</p>
+      <p> The Fetchers and Hoppers are souped up a lot. Now each Fetcher that's on standby (4 of them, 2 at each of the equatorial skyhooks) is attached to a Hopper on standby. When a target of opportunity comes around, the Hoppers act as a first stage to the Fetchers, accelerating them towards their targets so they reach them much sooner. Once the Fetcher is released, the Hopper returns. If necessary, it uses all its fuel on the boost, except what it needs to brake after release and enter an orbit around Earth or the Moon. If that is necessary, a Pod ship or another Hopper is then sent to retrieve it.</p>
+      <p>Both Hoppers and Pod ships are fitted to have modular fuel tanks that can be switched out easily for ones of a different size. Hoppers that are on Fetcher duty are fitted with much larger fuel tanks so they can thrust long enough to speed the Fetchers up enough to reach their targets in a timely manner. Pod ships hauling the returned asteroids down to berth with a skyhook also need to be able to do much longer burns that use far more fuel than normal, which means they need larger tanks for that. In fact, towards the end of this phase, as asteroid mining gets rolling, a nuclear Pod ship is made just for that job. The shielding around its engine is heavy as it needs to block radiation in all directions except the engine nozzles, but it still uses a lot less fuel. When not flying, it is berthed to the tip platform of the final polar skyhook.</p>
+      <p>Other than that, the Fetchers are larger, and are set up for modular last-minute assembly with the appropriate set of pieces, depending on the nature of the target. Characterization of the asteroids spotted has improved. If they are judged sufficiently solid and rigid, the complex SHEPHERD bagging mechanism isn't used. Instead the asteroid is just wrapped in a net for hauling, which is much lighter. It is also possible to vary the number of engines and size the fuel tank to the target. </p>
     </details>
     <details>
       <summary><h5>Final 2 Skyhooks </h5></summary>
@@ -12,13 +13,66 @@
       <p>The existence of three polar skyhooks means one of them passes within 3&deg; east or west of any spot on the Moon once every 5 days. A LNC that wasn't heavily loaded could manage the  extra distance and the turn necessary to meet up with the closest foot platform on any pass. So, most of the time, a LNC can go to or from anywhere, if needed, with a delay of no more than 14 hours (the time it takes a skyhook to orbit once).</p>
       <p>There are two equatorial skyhooks because they are the connection to Earth - and the rest of the solar system. It is much easier for ships from other worlds to rendezvous with a station in an equatorial orbit, as the Moon's equator is aligned very closely to the plane of the ecliptic (the plane on which the planets lie). Equally, any direction of travel on that plane is available once per orbit.</p>
       <p>Because asteroid retrieval remains a matter of reaching the very small, very numerous Near Earth Asteroids, having launch windows for pursuit of new targets open twice as often is a big help. As traffic to various points in the solar systems grows, the flexibility and added capacity of two equatorial skyhooks will become increasingly useful. </p>
-      <p>Each of the new skyhooks is given a 10 kiloton asteroid as an anchor mass. As these asteroids are mined, material removed is replaced by material sent up from the surface, to preserve that mass.</p>
+      <p>Each of the new skyhooks is given a 10 kiloton asteroid as an anchor mass. As these asteroids are mined, material removed is replaced by material sent up from the surface, to preserve that mass. They are set up with solar panel arrays, power equipment, and microwave transmitters so they can beam power to the colonies. They don't get space stations. The mining done on them is almost completely automated, and what isn't, is done by tele-operation. In the rare event that people have a reason to be on the anchor, a crew pod can be placed on the climber car and sent up, or a ship can dock with it.  </p>
     </details>
     <details>
       <summary><h5>Gagarin Shipyard</h5></summary>
+      <p>The shipyard goes into full swing once Cernan's Promise is producing materials for it. Components and modules for spacecraft and space stations are sent up the tether, and at the shipyard are assembled. Once fully operational, all interplanetary missions launch from Gagarin's skyhook, after their craft have been assembled there. Most satellites of Earth launch from Gagarin as well. Of the ones that don't, most launch from the EESS after final assembly there, which usually includes the addition of parts from the Moon (such as solar panels or Neumann Drives). Some manufacturing occurs at Gagarin as well, processes that require micro-gravity.</p>
+      <p>Crews for deep space missions usually do final training at Gagarin. It's also common for at least part of the crew to be drawn from the crews of Gagarin and Crossroads.</p>
+
     </details>
     <details>
-      <summary><h5>Interplanetary launches</h5></summary>
+      <summary><h5>Interplanetary Launches</h5></summary>
+      <p>The ships, fuel, and tether launch facilities of Gagarin allow the launch of a number of deep space missions with a scale and scope never previously possible. Thanks to Zylon produced on the Moon, Gagarin's tether cables have been massively upgraded. The upper tether is now able to dock ships massing 10 kilotons. The tether can be used to sling ships on a trajectory to either Venus or Mars with such speed that no fuel is needed to arrive. At those destinations, aerobraking can be used to enter orbit. That means ships could go to either world using only maneuvering thrusters. Their massive 10 kiloton bulk would be almost entirely payload. </p>
+      <p>Or, with high specific impulse engines like VASIMR or Neumann drives, a small fraction of the payload could be sacrificed for the sake of really short trip times. For more distant destinations, engines and fuel are needed. To get to Callisto, Jupiter's outer moon, with VASIMR drives about 1/6th of the ship would be fuel. Increase that to a third or a half is fuel, and that trip can be shortened from around 3 years to less than a year. </p>
+      <p>In most cases the spacecraft sent are only a tiny fraction of 10 kilotons. The reason the tether has been beefed up to take something so massive is for the special missions to Venus and Phobos.</p>
+      <details>
+        <summary>Phobos and Mars</summary>
+        <p>Phobos is a small moon orbiting about 6000 km above the equator of Mars. It's a dusty potato-shaped thing, with a giant crater at one end. Two missions are sent there. The first is a research, scouting, and prepping mission, the second is the undertaking of putting a space elevator on it.</p>
+        <details>
+          <summary>Mission One - Research and Prep</summary>
+          <p>A set of spider-legged walking rovers and a small swarm of orbiters examine the whole surface. It is widely sampled, scanned with ground-penetrating radar, and its inner structure mapped with seismic imaging. A large and complete lab does batteries of tests and detailed analysis. Several holes are bored 200 m deep and probed for water ice. A transmitter is set up that can send high volumes of data back to Earth. Engineering tests are done for planning of the next mission. Prototype equipment is tested. </p>
+        </details>
+        <details>
+          <summary>Mission Two - Space Elevator</summary>
+          <p>This was inspired by the post about just such an elevator on Hop's Blog</p>
+          <ul>
+            <li>The ship pulls into the Lagrange point between Phobos and Mars, where the pull of their separate gravities balance. It keeps station there, just 3 km above the surface of Phobos. </li>
+            <li>To securely anchor the space elevator, a belt made of a set of cables is wrapped around the waist of Phobos.</li>
+            <li>Tethers are extended from the ship towards Phobos, and downwards towards Mars. The ship becomes a space station on the tether, allowing later arriving ships to dock securely, well away from the unstable surface of Phobos.</li>
+            <li>The Marsward tether is extended 5100 km, to 800 km above the surface. It can bear a ship massing 100 tons. Dropped from this altitude, a lander only has to shed about half the kinetic energy it would have to from low orbit to make a soft landing.</li>
+            <li>The upper tether is extended 4500 km. It can bear the great mass of the crew ship that comes next. Released from the top platform, a ship has about 3/4 the energy needed to reach Earth.</li>
+            <li>The belt and the two tethers make up 8 kilotons of the payload. 500 tons is fuel for the coming crew ship, for their return home. The remaining kiloton or so of payload is a nuclear power plant, the infrastructure for beaming power along the elevators, all the equipment, supplies, and infrastructure of the station, and a small LNC that is dropped from the tether foot and descends to the surface of Mars. (More on the Mars LNCs in the next section.)</li>
+            <li>The lander's robots and rovers set up a nuclear reactor, processing plants for extracting argon, nitrogen, and oxygen from the atmosphere<sup class="note tooltip" data-tooltip-content="marswater">[?]</sup>, and storage tanks for the extracted gases. Then they go exploring.</li>
+          </ul>
+          <div class="tooltip_templates">
+            <span id="marswater">There is no evidence of subsurface water at the equator of Mars, where the lander would be dropped. If there was, there could be a prototype plant producing methane, from the water and the carbon dioxide that makes up most of the atmosphere. This process was first proposed for fuel production on Mars by Bob Zubrin as part of Mars Direct.</span>
+          </div>
+        </details>
+        <details>
+          <summary>Mission Three - Crew of 12</summary>
+          <p>The crew works from inside their ship except for a few EVAs. Phobos appears to be deeply covered in fine dust. It has a very weak gravity field. The rovers were designed to deal with that, humans on the surface could quickly be enveloped in a cloud of dust in which they flounder blind.</p>
+          <p>The ship they arrive in is less massive, but still very big. Though the ship's VASIMR engines have gotten them to Phobos in about 2 months, travel in deep space without heavy shielding is  considered too damaging to their health to risk. Their ship is shielded with 3 m of water around their tubular habitat. That accounts for 2.5 kilotons of its bulk, which provided them with a habitat 6 m in diameter by 20 m long for their journey, with minimal exposure to cosmic rays.</p>
+          <p>Their ship hauls 2 full-sized LNCs specialized for Mars. Their nuclear thermal engines are designed to run on nitrogen or argon. They are equipped to do entry, descent, and landing by retro-propulsion.</p>
+          <p>And it carries a kiloton of equipment and supplies which the LNCs ferry down to the surface. To do so they return several times, after refueling from the tanks of liquid nitrogen and liquid argon on the surface.</p>
+          <p>The robots delivered are remotely operated by the crew from Phobos station, but are capable of doing many tasks without supervision. They set up a field of solar panels and also a microwave rectenna grid that receives power from new solar panel masts on Phobos. They set up a hangar and a lab. </p>
+          <p>Then they set out to explore Mars in deep detail, searching specifically for life, or signs of past life. Unless and until that search leads to firm conclusions about how humans might affect or be affected by any possible life on Mars, humans do not set foot on the planet.</p>
+
+      </details>
+      </details>
+      <details>
+        <summary>Cloud-tops of Venus</summary>
+        
+      </details>
+      <details>
+        <summary>Sailing to Mercury</summary>
+      </details>
+      <details>
+        <summary>Ceres</summary>
+      </details>
+      <details>
+        <summary>Callisto</summary>
+      </details>
     </details>
     <details>
       <summary><h5>2nd Earth-orbiting Space Station</h5></summary>
