--- a/_includes/timeline/ph2-summary.html
+++ b/_includes/timeline/ph2-summary.html
@@ -9,7 +9,7 @@
     <li>The other two Fetchers are en route with catches of their own. One is carbonaceous and masses 1 kiloton, the other is mostly metallic and masses 2.5 kilotons.</li>
     <li>100 people live and work on the EESS</li>
     <li>50 people staff Crossroads, and 50 staff Gagarin.</li>
-    <li>There have been 200 launches to the EESS. Almost all of them have carried crew, as well as equipment and supplies for the various stations and Inukshuk.</li>
+    <li>There have been 200 launches to the EESS carrying a total of 8 kilotons of payload. Almost all of them have carried crew, as well as equipment and supplies for the various stations and Inukshuk.</li>
     <li>Most of those launches had an upper stage that was refueled with fuel from the Moon, and returned to Earth for reuse.</li>
     <li>Scaleable manufacturing processes, using purely materials acquired on the Moon or from asteroids, have been developed for the following goods: steel, topsoil, Zylon, a range of silicone polymers, transparent glass, structural glass composites, high explosives, sapphire, quartz, and pure metals including iron, aluminum, silicon, magnesium, titanium, calcium, and manganese </li>
   </ul>
